--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+
+        <link rel="shortcut icon" href="favicon copy.ico" >
     </head>
     <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <!--button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button-->
-          <a class="navbar-brand" href="#"><span id="theTitle">Planning Poker</span></a>
+          <a class="navbar-brand" href="#"><span id="theTitle">planningDeck</span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         
@@ -41,7 +37,7 @@
         <div class="col-md-12" id="phaseTitle">
 
           <h2>Select Phase </h2>
-          <p>Click a card to start.<br>
+          <p>Click on a card to start.<br>
 
         </div><!-- col --> 
 
@@ -80,11 +76,11 @@
 
       </div> <!-- row -->
 
-
-
       <footer>
       </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    </div> <!-- /container -->        
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
