--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Planning Poker</title>
+        <title>planningDeck - A Planning Poker App</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+        <link rel="shortcut icon" href="favicon.ico">
+        
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -15,8 +16,8 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-
-        <link rel="shortcut icon" href="favicon copy.ico" >
+        <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
+        
     </head>
     <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -34,10 +35,14 @@
 
       <div class="row">
 
-        <div class="col-md-12" id="phaseTitle">
+        <div class="col-md-12" id="intro">
 
           <h2>Select Phase </h2>
           <p>Click on a card to start.<br>
+
+        </div><!-- col --> 
+
+        <div class="col-md-12" id="phaseTitle">
 
         </div><!-- col --> 
 
