--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-md-12" id="intro">
 
           <h2>Select Phase </h2>
-          <p>Click on a card to start.<br>
+          <p>Click on any card to start.<br>
 
         </div><!-- col --> 
 
